--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ install:
   - bash miniconda.sh -b -p "$HOME/miniconda3"
   - export PATH="$HOME/miniconda3/bin:$PATH"
   - conda update --quiet --yes conda
-
   - conda env create -f environment.yml
   - source activate pygrf
   - python setup.py develop
 
 script:
+  - git diff --unified=0 master | flake8 --diff --show-source "$*" --config=.flake8.cython
+  - git diff --unified=0 master | flake8 --diff --show-source "$*" --max-line-length=80 --ignore=F403,F405
   - pytest pygrf/tests
 
 notifications:
